# my-automata

./: README.md  hie.yaml  my-automata.cabal
src/Automata/: DFA.hs
src/Examples/: ModThree.hs
