cabal-version:      3.0
name:               my-automata
version:            0.1.0.0
author:             hikari
category:           Math
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Automata.DFA
                    , Examples.ModThree
    build-depends:    base ^>=4.18.3.0
    hs-source-dirs:   src
    default-language: Haskell2010
